[package]
name = "bansheelong"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.4", features = ["tokio", "svg"], path = "../iced" }
iced_native = { path = "../iced/native" }
iced_futures = { path = "../iced/futures" }
time = { version = "0.3.5", features = ["local-offset"] }
