[package]
name = "bansheelong_client"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
iced = { features = ["tokio", "svg"], path = "../../iced" }
iced_native = { path = "../../iced/native" }
iced_futures = { path = "../../iced/futures" }
iced_style = { path = "../../iced/style" }
reqwest = { features = ["json"], version = "0.11.11" }
serde = { features = ["derive"], version = "1.0" }
serde_json = "1.0"
time = { version = "0.3.5", features = ["local-offset"] }
