[package]
name = "bansheelong_server"
version = "0.1.0"
edition = "2021"

[dependencies]
bansheelong_types = { path = "../types" }
futures = "0.3.21"
lazy_static = "1.4.0"
url = "2.2.2"
serde = { features = ["derive"], version = "1.0.140" }
serde_json = "1.0.82"
tokio = { features = ["full"], version = "1.20.1" }
tokio-stream = "0.1.9"
warp = "0.3.2"
