[package]
name = "bansheelong_shared_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
async-tungstenite = { features = ["tokio-rustls-webpki-roots"], version = "0.16" }
bansheelong_types = { path = "../types" }
chrono = "0.4.19"
futures = "0.3.21"
http = "0.2.8"
iced = { features = ["image", "tokio", "svg"], path = "../../iced" }
iced_graphics = { path = "../../iced/graphics" }
iced_futures = { path = "../../iced/futures" }
iced_native = { path = "../../iced/native" }
iced_style = { path = "../../iced/style" }
lazy_static = "1.4.0"
reqwest = { features = ["blocking", "json"], version = "0.11.11" }
serde = { features = ["derive"], version = "1.0" }
serde_json = "1.0"
time = { version = "0.3.5", features = ["local-offset"] }
tokio = { features = ["full"], version = "1.20.1" }
