[package]
name = "bansheelong_types"
version = "0.1.0"
edition = "2021"

[dependencies]
flexbuffers = "2.0.0"
futures = "0.3.21"
lazy_static = "1.4.0"
regex = "1.6.0"
rand = "0.7.3"
reqwest = { features = ["json"], version = "0.11.11" }
serde = { features = ["derive"], version = "1.0.140" }
serde_json = "1.0.82"
serde_with = "2.0.0"
tokio-test = "0.4.2"
